--- a/8_conclusiones.tex
+++ b/8_conclusiones.tex
@@ -5,8 +5,15 @@
 \addcontentsline{toc}{chapter}{Conclusiones}
 \onehalfspacing
 
-\lipsum[12-13]
+Nuestros sencillos esquemas cualitativos identifican direcciones en el espacio de expresión genética asociadas a diferentes procesos biológicos: envejecimiento, carcinogénesis, aparición de la enfermedad de Alzheimer. Cada una de estas direcciones se caracteriza por un "metagén" o perfil de expresión genética, del cual se pueden extraer los principales genes que contribuyen al proceso.
 
+Algunos de nuestros resultados confirman conocimientos previos, pero otros requieren mayor corroboración. Por ejemplo, la idea de que el envejecimiento programático podría estar relacionado con evitar el fuerte atractor GB, o la aparición tardía de la EA como la captura por el atractor de EA de muestras de edad normal. Esperamos que estos resultados motiven la investigación experimental en estas direcciones. El experimento en un modelo de ratones es particularmente factible, como lo demuestra la referencia \cite{hahn2023atlas}.
+
+Cabe destacar que incluso datos o métodos computacionales más refinados no podrían modificar sustancialmente nuestros esquemas cualitativos con solo tres atractores. Sus posiciones relativas podrían variar, pero las afirmaciones formuladas se mantendrán.
+
+Debido al carácter cualitativo de nuestro estudio, el análisis de genes y procesos relevantes no se aborda adecuadamente en este artículo. Sin embargo, analicemos cualitativamente siete marcadores conocidos para la EA y el GB según nuestro esquema. Los gráficos de violín para estos genes se muestran en \alert{la Figura 2 del Suplemento}. La figura muestra que los genes MAPT (proteína tau \cite{Strang_2019}) y APP (beta amiloide \cite{TCW_2016}) están subexpresados tanto en el GB como en la EA y, por lo tanto, según nuestro esquema, son genes tipo PC1, principalmente relacionados con el envejecimiento. En cierto modo, esto concuerda con los hallazgos del estudio del Instituto Allen sobre los patrones de proteína tau y placas amiloides en el cerebro envejecido. Por supuesto, ciertas mutaciones de estos genes podrían conducir a un envejecimiento cerebral acelerado y a la aparición temprana de la EA. El gen APOE \cite{Raulin_2022}, por el contrario, está desregulado inversamente en el GB y la EA. Es un gen del tipo PC2.
+
+Por otro lado, el marcador IDH1 [49] está sobreexpresado en la GB, pero es irrelevante en la EA. Los tres marcadores de GB, IDH2 [49], MKI67 [50] y ATRX [51], son genes similares a PC2. Se han estudiado principalmente en relación con la GB, pero el hecho de que sean genes PC2 indica que podrían desempeñar un papel importante también en la EA.
 
 \chapter*{Recomendaciones}\label{recomendations}
 \addcontentsline{toc}{chapter}{Recomendaciones}
