--- a/bibl.bib
+++ b/bibl.bib
@@ -611,13 +611,80 @@
 @Article{Poon_2020,
   author    = {Poon, Michael T. C. and Sudlow, Cathie L. M. and Figueroa, Jonine D. and Brennan, Paul M.},
   journal   = {Scientific Reports},
-  title     = {Longer-term ($\geq$ 2 years) survival in patients with glioblastoma in population-based studies pre- and post-2005: a systematic review and meta-analysis},
+  title     = {Longer-term ({$\geq$} 2 years) survival in patients with glioblastoma in population-based studies pre- and post-2005: a systematic review and meta-analysis},
   year      = {2020},
   issn      = {2045-2322},
   month     = jul,
   number    = {1},
   volume    = {10},
   doi       = {10.1038/s41598-020-68011-4},
+  publisher = {Springer Science and Business Media LLC},
+}
+
+@Article{Ohgaki2005,
+  author    = {Ohgaki, Hiroko and Kleihues, Paul},
+  journal   = {Acta Neuropathologica},
+  title     = {Epidemiology and etiology of gliomas},
+  year      = {2005},
+  issn      = {1432-0533},
+  month     = jan,
+  number    = {1},
+  pages     = {93--108},
+  volume    = {109},
+  doi       = {10.1007/s00401-005-0991-y},
+  publisher = {Springer Science and Business Media LLC},
+}
+
+@Article{alz2023,
+  journal   = {Alzheimer’s \& Dementia},
+  year      = {2023},
+  issn      = {1552-5279},
+  month     = mar,
+  number    = {4},
+  pages     = {1598--1695},
+  volume    = {19},
+  doi       = {10.1002/alz.13016},
+  publisher = {Wiley},
+}
+
+@Article{Strang_2019,
+  author    = {Strang, Kevin H. and Golde, Todd E. and Giasson, Benoit I.},
+  journal   = {Laboratory Investigation},
+  title     = {{MAPT} mutations, tauopathy, and mechanisms of neurodegeneration},
+  year      = {2019},
+  issn      = {0023-6837},
+  month     = jul,
+  number    = {7},
+  pages     = {912--928},
+  volume    = {99},
+  doi       = {10.1038/s41374-019-0197-x},
+  publisher = {Elsevier BV},
+}
+
+@Article{TCW_2016,
+  author    = {TCW, Julia and Goate, Alison M.},
+  journal   = {Cold Spring Harbor Perspectives in Medicine},
+  title     = {Genetics of $\beta$-{A}myloid {P}recursor {P}rotein in {A}lzheimer’s {D}isease},
+  year      = {2016},
+  issn      = {2157-1422},
+  month     = dec,
+  number    = {6},
+  pages     = {a024539},
+  volume    = {7},
+  doi       = {10.1101/cshperspect.a024539},
+  publisher = {Cold Spring Harbor Laboratory},
+}
+
+@Article{Raulin_2022,
+  author    = {Raulin, Ana-Caroline and Doss, Sydney V. and Trottier, Zachary A. and Ikezu, Tadafumi C. and Bu, Guojun and Liu, Chia-Chen},
+  journal   = {Molecular Neurodegeneration},
+  title     = {{ApoE} in {A}lzheimer’s disease: pathophysiology and therapeutic strategies},
+  year      = {2022},
+  issn      = {1750-1326},
+  month     = nov,
+  number    = {1},
+  volume    = {17},
+  doi       = {10.1186/s13024-022-00574-4},
   publisher = {Springer Science and Business Media LLC},
 }
 
