--- a/7_cap3.tex
+++ b/7_cap3.tex
@@ -66,4 +66,14 @@ Solo existen cuatro posibilidades para el destino de las trayectorias aleatorias
 
 Debido al elevado valor de \textit{fitness} del atractor GB, debería existir una probabilidad relativamente alta de que las trayectorias sean capturadas por el GB, lo que conduce a la iniciación de un tumor. Esto implica un enorme aumento del \textit{fitness}, la propagación del tumor en el cerebro y una esperanza de vida para el individuo de tan solo unos dos años tras la iniciación \cite{Poon_2020}. Esto podría afectar a los individuos en edad reproductiva. Por lo tanto, evitar el atractor GB podría ser objeto de la presión selectiva.
 
-Como comprobación indirecta, podemos comparar las incidencias de GB y AD. Estas deberían ser proporcionales a las tasas de captura de trayectorias aleatorias por los atractores de GB y AD. Como se mencionó, en un modelo donde la dirección de los saltos es aleatoria, la incidencia de GB debería ser mucho mayor que la de AD. Sin embargo, la incidencia global de glioblastoma es inferior a 10 por 100 000 personas [44], en contraste con el 5 \% de AD en personas de 65 a 74 años y el 13 \% en personas de 75 a 84 años [45]. La incidencia observada sugiere que se evita el movimiento hacia el centro de GB.
+Como comprobación indirecta, podemos comparar las incidencias de GB y la EA. Estas deberían ser proporcionales a las tasas de captura de trayectorias aleatorias por los atractores de GB y EA. Como se mencionó, en un modelo donde la dirección de los saltos es aleatoria, la incidencia de GB debería ser mucho mayor que la de la EA. Sin embargo, la incidencia global de glioblastoma es inferior a 10 por 100 000 personas \cite{Ohgaki2005}, en contraste con el 5 \% de la EA en personas de 65 a 74 años y el 13 \% en personas de 75 a 84 años \cite{alz2023}. La incidencia observada sugiere que se evita el movimiento hacia el centro de GB.
+
+\begin{enumerate}
+	\item[5.] \textbf{La aparición tardía de la EA podría ser el resultado de la captura por parte del atractor de la EA de microestados cerebrales envejecidos.}
+\end{enumerate}
+
+La imagen es, por lo tanto, la siguiente. El proceso de envejecimiento se relaciona inicialmente con un desplazamiento a lo largo del corredor de envejecimiento, con la correspondiente disminución del \textit{fitness}. En los últimos pasos, los estados O son capturados por el atractor débil de la EA.
+
+Como se mencionó anteriormente, la afirmación sobre el corredor de envejecimiento está respaldada por el experimento en un modelo de ratón, mientras que la captura por parte del centro de la EA está sugerida por los cálculos de la referencia \cite{Gonzalez_2021}, particularmente por los resultados que se muestran en la Fig. \ref{fig:otoad}, que es un reconstrucción de la Fig. 4 de esa referencia.
+
+\alert{En la Tabla Suplementaria V} se muestran los 10 genes principales en la transición de O a la EA. Se trata de genes incluidos en la \alert{Tabla Suplementaria I}, pero que varían en dirección opuesta, es decir, en la dirección negativa del eje PC1. Este hecho se representa en el diagrama esquemático de la Fig. \ref{fig:fig1b}.
