--- a/4_introduccion.tex
+++ b/4_introduccion.tex
@@ -39,7 +39,7 @@ Esta visión inusual puede ayudar a comprender las relaciones entre la EA y el G
 \alert{El trabajo presentado como tesis de diploma consta de una introducción, tres capítulos, las conclusiones y las recomendaciones. El contenido se distribuye de la siguiente forma:}
 
 \begin{itemize}
-	\item[$\bullet$] \textbf{Introducción:} Se hace una breve descripción del panorama genético y epidemiológico que engloban a la EA, el GB y el envejecimiento. Se ejemplifican las relaciones que existen entre estos atractores.
+	\item[$\bullet$] \textbf{Introducción:} Se hace una breve descripción del panorama genético y epidemiológico que engloban a la EA, el GB y el envejecimiento. Se ejemplifican las relaciones que existen entre estas enfermedades.
 	
 	\item[$\bullet$] \textbf{Capítulo 1:} 
 	
