--- a/bibl.bib
+++ b/bibl.bib
@@ -688,4 +688,81 @@
   publisher = {Springer Science and Business Media LLC},
 }
 
+@Article{Cohen_2013,
+  author    = {Cohen, Adam L. and Holmen, Sheri L. and Colman, Howard},
+  journal   = {Current Neurology and Neuroscience Reports},
+  title     = {{IDH1} and {IDH2} {M}utations in {G}liomas},
+  year      = {2013},
+  issn      = {1534-6293},
+  month     = mar,
+  number    = {5},
+  volume    = {13},
+  doi       = {10.1007/s11910-013-0345-4},
+  publisher = {Springer Science and Business Media LLC},
+}
+
+@Article{Chen_2015,
+  author    = {Chen, Wen-Jie and He, De-Shen and Tang, Rui-Xue and Ren, Fang-Hui and Chen, Gang},
+  journal   = {Asian Pacific Journal of Cancer Prevention},
+  title     = {Ki-67 is a Valuable Prognostic Factor in Gliomas: Evidence from a Systematic Review and Meta-analysis},
+  year      = {2015},
+  issn      = {1513-7368},
+  month     = feb,
+  number    = {2},
+  pages     = {411--420},
+  volume    = {16},
+  doi       = {10.7314/apjcp.2015.16.2.411},
+  publisher = {Asian Pacific Organization for Cancer Prevention},
+}
+
+@Article{Haase_2018,
+  author    = {Haase, Santiago and Garcia-Fabiani, María Belén and Carney, Stephen and Altshuler, David and Núñez, Felipe J. and Méndez, Flor M. and Núñez, Fernando and Lowenstein, Pedro R. and Castro, Maria G.},
+  journal   = {Expert Opinion on Therapeutic Targets},
+  title     = {Mutant {ATRX}: uncovering a new therapeutic target for glioma},
+  year      = {2018},
+  issn      = {1744-7631},
+  month     = jun,
+  number    = {7},
+  pages     = {599--613},
+  volume    = {22},
+  doi       = {10.1080/14728222.2018.1487953},
+  publisher = {Informa UK Limited},
+}
+
+@Article{van_Lengerich_2023,
+  author    = {van Lengerich, Bettina and Zhan, Lihong and Xia, Dan and Chan, Darren and Joy, David and Park, Joshua I. and Tatarakis, David and Calvert, Meredith and Hummel, Selina and Lianoglou, Steve and Pizzo, Michelle E. and Prorok, Rachel and Thomsen, Elliot and Bartos, Laura M. and Beumers, Philipp and Capell, Anja and Davis, Sonnet S. and de Weerd, Lis and Dugas, Jason C. and Duque, Joseph and Earr, Timothy and Gadkar, Kapil and Giese, Tina and Gill, Audrey and Gnörich, Johannes and Ha, Connie and Kannuswamy, Malavika and Kim, Do Jin and Kunte, Sebastian T. and Kunze, Lea H. and Lac, Diana and Lechtenberg, Kendra and Leung, Amy Wing-Sze and Liang, Chun-Chi and Lopez, Isabel and McQuade, Paul and Modi, Anuja and Torres, Vanessa O. and Nguyen, Hoang N. and Pesämaa, Ida and Propson, Nicholas and Reich, Marvin and Robles-Colmenares, Yaneth and Schlepckow, Kai and Slemann, Luna and Solanoy, Hilda and Suh, Jung H. and Thorne, Robert G. and Vieira, Chandler and Wind-Mark, Karin and Xiong, Ken and Zuchero, Y. Joy Yu and Diaz, Dolo and Dennis, Mark S. and Huang, Fen and Scearce-Levie, Kimberly and Watts, Ryan J. and Haass, Christian and Lewcock, Joseph W. and Di Paolo, Gilbert and Brendel, Matthias and Sanchez, Pascal E. and Monroe, Kathryn M.},
+  journal   = {Nature Neuroscience},
+  title     = {A {TREM2}-activating antibody with a blood–brain barrier transport vehicle enhances microglial metabolism in Alzheimer’s disease models},
+  year      = {2023},
+  issn      = {1546-1726},
+  month     = jan,
+  doi       = {10.1038/s41593-022-01240-0},
+  publisher = {Springer Science and Business Media LLC},
+}
+
+@Article{Sun_2023,
+  author    = {Sun, Rui and Han, Rowland and McCornack, Colin and Khan, Saad and Tabor, G. Travis and Chen, Yun and Hou, Jinchao and Jiang, Haowu and Schoch, Kathleen M. and Mao, Diane D. and Cleary, Ryan and Yang, Alicia and Liu, Qin and Luo, Jingqin and Petti, Allegra and Miller, Timothy M. and Ulrich, Jason D. and Holtzman, David M. and Kim, Albert H.},
+  journal   = {Science Advances},
+  title     = {{TREM2} inhibition triggers antitumor cell activity of myeloid cells in glioblastoma},
+  year      = {2023},
+  issn      = {2375-2548},
+  month     = may,
+  number    = {19},
+  volume    = {9},
+  doi       = {10.1126/sciadv.ade3559},
+  publisher = {American Association for the Advancement of Science (AAAS)},
+}
+
+@Article{Mencke_2020,
+  author    = {Mencke, Pauline and Hanss, Zoé and Boussaad, Ibrahim and Sugier, Pierre-Emmanuel and Elbaz, Alexis and Krüger, Rejko},
+  journal   = {Frontiers in Neurology},
+  title     = {Bidirectional Relation Between Parkinson’s Disease and Glioblastoma Multiforme},
+  year      = {2020},
+  issn      = {1664-2295},
+  month     = aug,
+  volume    = {11},
+  doi       = {10.3389/fneur.2020.00898},
+  publisher = {Frontiers Media SA},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
