--- a/2_dedicatoria.tex
+++ b/2_dedicatoria.tex
@@ -11,7 +11,9 @@
 \begin{flushright}
 %	\textit{A veces, aceptar ayuda cuesta m\'as que ofrecerla.}\\
 %	\textit{Luminara Undulis}
-	\textit{Aquí va la dedicatoria o una frase cool}
+	\textit{Lo que sabemos es una gota de agua;}\\
+	\textit{lo que ignoramos es el océano}\\
+	\textit{Isaac Newton}
 \end{flushright}
 
 
