--- a/8_conclusiones.tex
+++ b/8_conclusiones.tex
@@ -13,9 +13,13 @@ Cabe destacar que incluso datos o métodos computacionales más refinados no pod
 
 Debido al carácter cualitativo de nuestro estudio, el análisis de genes y procesos relevantes no se aborda adecuadamente en este artículo. Sin embargo, analicemos cualitativamente siete marcadores conocidos para la EA y el GB según nuestro esquema. Los gráficos de violín para estos genes se muestran en \alert{la Figura 2 del Suplemento}. La figura muestra que los genes MAPT (proteína tau \cite{Strang_2019}) y APP (beta amiloide \cite{TCW_2016}) están subexpresados tanto en el GB como en la EA y, por lo tanto, según nuestro esquema, son genes tipo PC1, principalmente relacionados con el envejecimiento. En cierto modo, esto concuerda con los hallazgos del estudio del Instituto Allen sobre los patrones de proteína tau y placas amiloides en el cerebro envejecido. Por supuesto, ciertas mutaciones de estos genes podrían conducir a un envejecimiento cerebral acelerado y a la aparición temprana de la EA. El gen APOE \cite{Raulin_2022}, por el contrario, está desregulado inversamente en el GB y la EA. Es un gen del tipo PC2.
 
-Por otro lado, el marcador IDH1 [49] está sobreexpresado en la GB, pero es irrelevante en la EA. Los tres marcadores de GB, IDH2 [49], MKI67 [50] y ATRX [51], son genes similares a PC2. Se han estudiado principalmente en relación con la GB, pero el hecho de que sean genes PC2 indica que podrían desempeñar un papel importante también en la EA.
+Por otro lado, el marcador IDH1 \cite{Cohen_2013} está sobreexpresado en la GB, pero es irrelevante en la EA. Los tres marcadores de GB, IDH2 \cite{Cohen_2013}, MKI67 \cite{Chen_2015} y ATRX \cite{Haase_2018}, son genes similares a PC2. Se han estudiado principalmente en relación con la GB, pero el hecho de que sean genes PC2 indica que podrían desempeñar un papel importante también en la EA.
+
+Consideremos, como último ejemplo, la reciente demostración de la relevancia de TREM2 en la EA \cite{van_Lengerich_2023}. Se ha demostrado que la activación de TREM2 en la EA mejora el metabolismo microglial. Según nuestro análisis, TREM2 es un gen PC2, subexpresado en la EA y sobreexpresado en el GB. Por lo tanto, esperamos que la inhibición de TREM2 en células de glioma pueda tener un efecto importante en el GB. Este hecho, según nuestro sencillo esquema, se encuentra actualmente en estudio \cite{Sun_2023}.
 
 \chapter*{Recomendaciones}\label{recomendations}
 \addcontentsline{toc}{chapter}{Recomendaciones}
 
-\lipsum[14-15]
+El diagrama de la Fig. \ref{fig:fig1a} debe completarse con datos correspondientes a otros tipos de demencia o trastornos cerebrales. En particular, se espera un área de la enfermedad de Parkinson cercana al atractor de la EA y opuesta al GB \cite{Mencke_2020}. El panorama completo puede revelar una topología aún más precisa del espacio de expresión genética y un diagrama de Wright más completo.
+
+Anticipamos que diagramas similares en otros tejidos, además de proporcionar una perspectiva integral, podrían ser útiles en la comprensión de la biología de enfermedades o trastornos aparentemente no relacionados, y en el descubrimiento de pistas inesperadas para su tratamiento.
