--- a/4_introduccion.tex
+++ b/4_introduccion.tex
@@ -7,11 +7,11 @@
 
 El \textit{fitness} celular refiere a la capacidad de una célula de sobrevivir y proliferar en un ambiente determinado. Abarca varios factores como la capacidad de la célula para adaptarse al ambiente, resistir al estrés y mantener la homeostasis. Este concepto es particularmente importante en la biología del cáncer, donde los niveles de de \textit{fitness} celular pueden determinar su supervivencia y dominancia dentro de un tejido.
 
-Un paradigma conocido en la biología molecular expresa que los máximos locales de \textit{fitness}, en el espacio de expresión genética, están relacionados con estados biológicos accesibles. Un diagrama de Wright es una representación gráfica reducida del panorama genético, donde los picos y valles representan diferentes genotipos y sus niveles relativos de \textit{fitness} \cite{wright1932roles}, ver figura \ref{fig:wrightDiagram}. 
+Un paradigma conocido en la biología molecular expresa que los máximos locales de \textit{fitness}, en el espacio de expresión genética, están relacionados con estados biológicos accesibles. Un diagrama de Wright es una representación gráfica reducida del panorama genético, donde los picos y valles representan diferentes genotipos y sus niveles relativos de \textit{fitness} \cite{wright1932roles}, ver Fig. \ref{fig:wrightDiagram}. 
 
 \begin{figure}[ht]
 	\centering
-	\includegraphics[scale=0.5]{figures/wright_diagram.png}
+	\includegraphics[scale=0.64]{figures/wright_diagram.png}
 	\caption{Representación esquemática de un diagrama de Wright. Las zonas de mayor \textit{fitness} (+) están asociadas con estados biológicos accesibles. Las de menor \textit{fitness} (-) son solo zonas de transito. Las lineas discontinuas delimitan los distintos niveles de \textit{fitness}. Tomada de la referencia \cite{wright1932roles}}
 	\label{fig:wrightDiagram}
 \end{figure}
